syntax = "proto3";

package user;

option go_package = "./user";

// 用户注册
message RegisterRequest {
  string loginName = 1;
  string password = 2;
}

message RegisterResponse {
  int64 userId = 1;
}

// 用户登录
message LoginRequest {
  string loginName = 1;
  string passwordMd5 = 2;
}

message LoginResponse {
  int64 userId = 1;
  string token = 2;
  int64 updateTime = 3;
  int64 expireTime = 4;
}

// 获取用户信息
message GetInfoRequest {
  string token = 1;
}

message GetInfoResponse {
  string nickName = 1;
  string loginName = 2;
  string introduceSign = 3;
}

// 修改用户信息
message UpdateInfoRequest {
  string token = 1;
  string nickName = 2;
  string passwordMd5 = 3;
  string introduceSign = 4;
}

message UpdateInfoResponse {
  string token = 1;
  string nickName = 2;
  string introduceSign = 4;
}

// 退出登录
message LogoutRequest {
  string token=1;
}


// 查看用户列表
message GetUserListRequest {
  int64 pageNumber = 1; // 页码
  int64 pageSize = 2;// 每页大小
}

// 用户
message UserModel {
  int64 userId = 1;
  string nickName = 2;
  string loginName = 3;
  string passwordMd5 = 4;
  string introduceSign = 5;
  int64 isDeleted = 6;
  int64 lockedFlag = 7;
  int64 createTime = 8;
}
message GetUserListResponse {
  repeated UserModel list = 1;
  int64   totalCount = 2;
  int64   totalPage = 3;
  int64   currPage = 4;
  int64   pageSize = 5;
}
// 用户禁用或解除
message  LockUserRequest {
  repeated int64 ids = 1;
  int64 lockStatus = 2;
}
message EmptyResponse {
}

// service
service user {
  rpc login(LoginRequest) returns(LoginResponse);
  rpc register(RegisterRequest) returns(RegisterResponse);
  rpc getUserInfo(GetInfoRequest) returns(GetInfoResponse);
  rpc updateUserInfo(UpdateInfoRequest) returns(UpdateInfoResponse);
  rpc logout(LogoutRequest) returns(EmptyResponse);
  rpc getUserList(GetUserListRequest) returns(GetUserListResponse);
  rpc lockUser(LockUserRequest) returns(EmptyResponse);
}